--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
  <title> Final Project-Home</title>
  </head>
@@ -10,13 +11,13 @@
  <!-- Menu goes here -->
  
  <center>
- <b>Home</b> | <a href="">About</a> | <a href="">Topic</a> | a href'"">Contact</a>
+ <b>Home</b> | <a href="">About</a> | <a href="">Topic</a> | <a href="">Contact</a>
  </center>
  
  about.html
  
  /secondfolder/about.html.html
  
- <body>
- </html>
+ </body>
+  </html>
  
