--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
  <!-- Menu goes here -->
  
  <center>
- <b>Home</b> | <a href="">About</a> | <a href="">Topic</a> | <a href="">Contact</a>
+ <b>Home</b> | <a href="about.html">About</a> | <a href="topic.html">Topic</a> | <a href="contact">Contact</a>
  </center>
- 
- about.html
- 
- /secondfolder/about.html.html
+
  
  </body>
   </html>
