--- a/about.html
+++ b/about.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+   <title>Final Project-About</title>
+  </head>
+  <body>
+    
+ <center><h1> MyFinalProject.com</h1></center>
+   
+ <center>
+   
+   <a href=" ">Home</a> | <b>About</b> | <a href=" ">Topic</a>| <a href="">Contact</a>
+   
+    </center>
+    
+  </body>
+  
+</html>
+   
+  
