--- a/topic.html
+++ b/topic.html
@@ -9,7 +9,7 @@
    
  <center>
    
-   <a href=" ">Home</a> | <a href="">About</a>  | <b>Topic</b> | <a href="">Contact</a>
+   <a href="index.html">Home</a> | <a href="topic.html">About</a>  | <b>Topic</b> | <a href="contact.html">Contact</a>
    
     </center>
     
