--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+ <head>
+   <title>Final Project-About</title>
+  </head>
+  <body>
+    
+ <center><h1> MyFinalProject.com</h1></center>
+   
+ <center>
+   
+   <a href="index.html">Home</a> | <a href="topic.html">About</a>  | <a href="topic.html">Topic</a> | <b> Contact</b> 
+    </center>
+    
+  </body>
+  
+</html>
+   
+  
 
