--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
    
    <aside>
   <ul> Favorite Movies
-   <li>    </li>
-   <li>    </li>
-   <li>     </li>
-   <li>     </li>
-   <li>      </li>
+   <li>The Lion King</li>
+   <li>Clueless</li>
+   <li>Mean Girls</li>
+   <li>Home Alone</li>
+   <li>Pretty Woman</li>
     </ul>
   
     
