--- a/about.html
+++ b/about.html
@@ -15,18 +15,26 @@
    </nav>
    
    <aside>
-  <ul> Favorite Movies
-   <li>The Lion King</li>
-   <li>Clueless</li>
-   <li>Mean Girls</li>
-   <li>Home Alone</li>
-   <li>Pretty Woman</li>
+    <ul> Favorite Activities/Hobbies
+   <li></li>
+   <li>Photography/ taking pics</li>
+   <li>Listening to music</li>
+   <li>Watching movies</li>
+   <li>Using social media/internet</li>
     </ul>
-  
-    
-   </aside>
-    
-  </body>
+  </aside>
+   
+  <main>
+   <h2> 
+    One of my favorite things to do is taking pictures; I love to take pictures daily, even if it's of boring or random 
+    things. Sometimes when there is nothing fun to take pictures of I take pictures of anything and just edit them to 
+    look all artsy. Listening to music would have to be one my second favorite if not my favorite because it is so relaxing 
+    and fun. After a stressful day it is the best to just listen to music and even if I'm having a great day listening to music
+    makes it great. Social media /internet is something I use latley and is just something that I am so usual and is a distraction
+    from annoying situations. 
+  </h2>
+   </main>
+    </body>
   
 </html>
    
