--- a/about.html
+++ b/about.html
@@ -32,6 +32,14 @@
     and fun. After a stressful day it is the best to just listen to music and even if I'm having a great day listening to music
     makes it great. Social media /internet is something I use latley and is just something that I am so usual and is a distraction
     from annoying situations. 
+    
+    <ul> Favorite Movies
+     <li>The Lion King</li>
+     <li>Clueless</li>
+     <li>Mean Girls</li>
+     <li>Home Alone</li>
+     <li>Pretty Woman</li>
+    </ul>
   </h2>
    </main>
     </body>
