--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
  <nav>  
  <center>
    
-   <a href=" ">Home</a> | <b>About</b> | <a href=" ">Topic</a>| <a href="">Contact</a>
+   <a href="index.html">Home</a> | <b>About</b> | <a href="topic.html">Topic</a>| <a href="contact.html">Contact</a>
   
     </center>
    </nav>
