--- a/topic.html
+++ b/topic.html
@@ -2,6 +2,7 @@
 <html>
  <head>
    <title>Final Project-About</title>
+  <link rel="stylesheet" type="text/css" href="topic.css">
   </head>
   <body>
     
