--- a/topic.html
+++ b/topic.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     
- <center><h1> MyFinalProject.com</h1></center>
+ <center><h1>Poverty Issue</h1></center>
    
  <center>
    
