--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     
- <center><h1> MyFinalProject.com</h1></center>
+ <center><h1> About Me </h1></center>
  <nav>  
  <center>
    
