--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
    <li>Using social media/internet</li>
     </ul>
   </aside>
+  
+   <img src="../movie1.png" class="sideleft-image" width="220" height="320" alt="movie1">
+   <img scr="../movie2.jpg" class="sideleft-image" width="200" height="180" alt="movie2">
+   
    
   <main>
    <h2> 
