--- a/topic.html
+++ b/topic.html
@@ -13,8 +13,34 @@
    <a href="index.html">Home</a> | <a href="topic.html">About</a>  | <b>Topic</b> | <a href="contact.html">Contact</a>
    
     </center>
+ 
+  <aside>
+<ul> Percentage of People in Poverty in several Countrys:
+  
+<li> 15.3% of Californians lacked enough resources </li>
+<li>  In Canada bout 3.2 million people now live in low income, including 634,000 children </li>
+ <li> More than 500 million people were lifted out of extreme poverty as China's poverty rate fell 
+       from 88 percent in 1981 to 6.5 percent in 2012</li>
+  <li> In Mexico people live with less than $2.50 a day	8.8% (10.9 million)</li>
+  <li>A total of 246,000 Mississippi children, or 34 percent, are living in poverty</li>
+   </ul>
+
+ <main>   
+ <h2>
+There are millions of people in poverty worldwide.At least 80% of humanity lives on less than $10 a day. More than 80 percent of the world’s 
+ population lives in countries where income differentials are widening. The poorest 40 percent of the world’s population accounts for 
+ 5 percent of global income. The richest 20 percent accounts for three-quarters of world income. This is a tragic horrible issue that needs
+  to fix because people are dying, innocent children are dying and that is not okay. According to UNICEF, 22,000 children die each day due to 
+  poverty. And they die quietly in some of the poorest villages on earth, far removed from the scrutiny and the conscience of the world. 
+ Being meek and weak in life makes these dying multitudes even more invisible in death.
+  </h2>
+   </main>
+   
     
-  </body>
+   <footer>
+   </footer>
+   
+ </body>
   
 </html>
    
