--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
     things. Sometimes when there is nothing fun to take pictures of I take pictures of anything and just edit them to 
     look all artsy. Listening to music would have to be one my second favorite if not my favorite because it is so relaxing 
     and fun. After a stressful day it is the best to just listen to music and even if I'm having a great day listening to music
-    makes it great. Social media /internet is something I use latley and is just something that I am so usual and is a distraction
-    from annoying situations. 
+    makes it great. Social media /internet is something I use daily and is just something that is so normal and kind of like a
+    routine. Using my phone a distraction from annoying situations. 
     
     <ul> Favorite Movies
      <li>The Lion King</li>
