--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" type="text/css" href="about.css">
   </head>
   <body>
-    
+    <div id="header">
+     <div class="container">
+      <div id="nav">
  <center><h1>AboutMe</h1></center>
  <nav>  
  <center>
