--- a/about.html
+++ b/about.html
@@ -8,15 +8,21 @@
     <div id="menu">
      <div class="container">
       <div id="nav">
+      </div>
  <center><h1>AboutMe</h1></center>
  <nav>  
  <center>
    
    <a href="index.html">Home</a> | <b>About</b> | <a href="topic.html">Topic</a>| <a href="contact.html">Contact</a>
   
+  
     </center>
    </nav>
-   
+       
+   <div>
+    <div id="SideBar"></div>
+    <div id="MainBody"></div>
+    <div id="Footer"></div>
    <aside>
     <ul> Favorite Activities/Hobbies
    <li></li>
@@ -49,6 +55,10 @@
     </ul>
   </h2>
    </main>
+    <footer>
+     <p> Posted BY: Jazmin 
+     </p>
+    </footer>
     </body>
   
 </html>
