--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
  </head>
  
  <body>
+ <header class="mainheader">
  
+  </header>
+  
  <center><h1> MyFinalProject.com</h1></center>
  
  <!-- Menu goes here -->
@@ -13,7 +16,10 @@
  <center>
  <b>Home</b> | <a href="about.html">About</a> | <a href="topic.html">Topic</a> | <a href="contact">Contact</a>
  </center>
-
+<div class="mainContent">
+  
+  
+  </div>
  
  </body>
   </html>
