--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <div id="MainBody"></div>
     <div id="Footer"></div>
    <aside>
-    <ul> Favorite Activities/Hobbies
+    <ul> About Me: Favorite Activities/Hobbies
    <li></li>
    <li>Photography/ taking pics</li>
    <li>Listening to music</li>
@@ -31,25 +31,21 @@
     </ul>
   </aside>
   
-   <img src="../movie1.png" class="sideleft-image" width="220" height="320" alt="movie1">
-   <img scr="../movie2.jpg" class="sideleft-image" width="200" height="180" alt="movie2">
-   
+  
    
   <main>
    <h2> 
-    One of my favorite things to do is taking pictures; I love to take pictures daily, even if it's of boring or random 
-    things. Sometimes when there is nothing fun to take pictures of I take pictures of anything and just edit them to 
-    look all artsy. Listening to music would have to be one my second favorite if not my favorite because it is so relaxing 
-    and fun. After a stressful day it is the best to just listen to music and even if I'm having a great day listening to music
-    makes it great. Social media /internet is something I use daily and is just something that is so normal and kind of like a
-    routine. Using my phone a distraction from annoying situations. 
-    
-    <ul> Favorite Movies
-     <li>The Lion King</li>
-     <li>Clueless</li>
-     <li>Mean Girls</li>
-     <li>Home Alone</li>
-     <li>Pretty Woman</li>
+    I have created a website about a huge worldwide issue; Poverty. I decided to do this website on the this horrible and tragic 
+    issue because I feel passionatley that this is one of biggest issues ever. I will share information on this website about how 
+    so many people deal with poverty worldwide and how it is affecting so many families causing so many sicknesses and even leading
+    to death. I will be adding CSS into this website to make it look fun and unique. It will also contain links to make it easier to view 
+    diffrent pages. 
+    <ul> Things that I have Learned in this Class
+     <li>HTML and its language</li>
+     <li>What CSS is and how it is used</li>
+     <li>How to link into different pages</li>
+     <li>Layouts</li>
+     <li>Creating small basic websites</li>
     </ul>
   </h2>
    </main>
