--- a/about.html
+++ b/about.html
@@ -35,17 +35,19 @@
    
   <main>
    <h2> 
-    I have created a website about a huge worldwide issue; Poverty. I decided to do this website on the this horrible and tragic 
-    issue because I feel passionatley that this is one of biggest issues ever. I will share information on this website about how 
-    so many people deal with poverty worldwide and how it is affecting so many families causing so many sicknesses and even leading
-    to death. I will be adding CSS into this website to make it look fun and unique. It will also contain links to make it easier to view 
-    diffrent pages. 
-    <ul> Things that I have Learned in this Class
-     <li>HTML and its language</li>
-     <li>What CSS is and how it is used</li>
-     <li>How to link into different pages</li>
+    My name is Jamin Velazquez ans I have created a website about a huge worldwide issue; Poverty. I will be creating this website
+    using what I have been learning in my Computer Science Class. I will be coding using html and making it unique with CSS. At first 
+    learning how to code was really difficult because it was something so new, but after a lot of practice and lots of help I have now
+    gained a better understanding on how to create websites. I definetly am not an expert because when I start something new I always 
+    struggle for a while. Creating websites and using all the new tags has been very fun but kind of confusing at times. I think that this 
+    class can definetly be helful to people and with practice anyone can learn a few new things!
+  
+    <ul> A few things I have learned in Computer Science Class:
+    <li>What CSS is and how it is used</li>
+    <li>How to link into different pages</li>
      <li>Layouts</li>
      <li>Creating small basic websites</li>
+    <li>Using tags to make boxes and list</li>
     </ul>
   </h2>
    </main>
