--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <li>How to link into different pages</li>
      <li>Layouts</li>
      <li>Creating small basic websites</li>
-    <li>Using tags to make boxes and list</li>
+    <li>Using tags to make boxes and lists</li>
     </ul>
   </h2>
    </main>
