--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 <head>
  <title> Final Project-Home</title>
  </head>
- 
  <body>
  <header class="mainheader">
- 
   </header>
   
  <center><h1> MyFinalProject.com</h1></center>
  
  <!-- Menu goes here -->
- 
- <center>
+  <center>
  <b>Home</b> | <a href="about.html">About</a> | <a href="topic.html">Topic</a> | <a href="contact">Contact</a>
  </center>
 <div class="mainContent">
-  
-  
   </div>
- 
+  <h1>
+   What Is the Purpose Of the Home Page?
+  </h1>
+   
  </body>
   </html>
  
