--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="mainContent">
   </div>
   <h1>
-   What Is the Purpose Of the Home Page?
+   <center> What Is the Purpose Of the Home Page?</center>
   </h1>
    
  </body>
