--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <header class="mainheader">
   </header>
   
- <center><h1> MyFinalProject.com</h1></center>
+ <center><h1> Homepage</h1></center>
  
  <!-- Menu goes here -->
   <center>
