--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
   </div>
   <h1>
    <center> What Is the Purpose Of the Home Page?</center>
+   The purpose of this page is to tell you what this is and what I what I will be doing with this website. This page is the first to other
+   three pages which I will be linking from here. This home page is being constructed off of what I have been learning in my Computer Science Class. I
+   will be trying to use diffrent tags to make my page diferent and fun. I will be using the basics I have learned which are HtML(language of
+   the computer/how to code) and CSS which is basically the "decorating" and "styling". 
   </h1>
-   
+  <ul> Why Computer Science is benefitial for everyone
+   <li> Problem Solving(which is essential skin)</li>
+   <li> Design, Development and Analysis of Software</li>
+   <li>Hardware used to Solve Problems in a Variety of Business</li>
+   <li> Scientific and Social Contexts.<li>
+  </ul>
  </body>
   </html>
  
