--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
  <title> Final Project-Home</title>
+ <link rel="stylesheet" type="text/css" href="index.css">
  </head>
  <body>
  <header class="mainheader">
