--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
    the computer/how to code) and CSS which is basically the "decorating" and "styling". </p>
   </h1>
 <aside>  
-  <ul> Why Computer Science is benefitial for everyone
+  <ul> Why Computer Science is benefitial for everyone:
    <li> Problem Solving(which is essential skin)</li>
    <li> Design, Development and Analysis of Software</li>
    <li>Hardware used to Solve Problems in a Variety of Business</li>
-   <li> Scientific and Social Contexts.<li>
+   <li> Scientific and Social Contexts<li>
   
   </ul>
   </aside>
