--- a/topic.html
+++ b/topic.html
@@ -36,10 +36,18 @@ There are millions of people in poverty worldwide.At least 80% of humanity lives
   </h2>
    </main>
    
-    
-   <footer>
-   </footer>
-   
+<main> 
+ <h2>
+  Some people have started huge charities trying to help people in need. Some of the biggest and most known ten charities are 
+ Oxfam, Save the Children, ActionAid, CARE International, Christian Aid, The British Red Cross, UNICEF, and Plan UK.The Borgen 
+  Project’s quest to end extreme poverty is shared by countless people and organizations. A truly overwhelming number of non-profits are
+  working to end poverty, and it can be hard to know where you should donate money. Here’s a list of 10 charities that fight poverty that 
+  all received 4-star overall ratings from Charity Navigator, a well-known charity watchdog organization.
+  <a https="https://www.want2donate.org/charity-faqs/what-are-the-top-10-charities-which-help-people-in-poverty"><li>Donate</li></a>
+ </h2>
+  <footer>
+  
+ </footer> 
  </body>
   
 </html>
