--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </h1>
 <aside>  
   <ul> Why Computer Science is benefitial for everyone:
-   <li> Problem Solving(which is essential skin)</li>
+   <li> Problem Solving(which is essential skill)</li>
    <li> Design, Development and Analysis of Software</li>
    <li>Hardware used to Solve Problems in a Variety of Business</li>
    <li> Scientific and Social Contexts<li>
