--- a/topic.html
+++ b/topic.html
@@ -11,16 +11,16 @@
  <center>
    
    <a href="index.html">Home</a> | <a href="topic.html">About</a>  | <b>Topic</b> | <a href="contact.html">Contact</a>
-   
    </center>
-  
-   <p> Some people have started huge charities trying to help people in need. Some of the biggest and most known ten charities are 
+   
+ 
+ <center> <b> <p> Some people have started huge charities trying to help people in need. Some of the biggest and most known ten charities are 
  Oxfam, Save the Children, ActionAid, CARE International, Christian Aid, The British Red Cross, UNICEF, and Plan UK.The Borgen 
   Project’s quest to end extreme poverty is shared by countless people and organizations. A truly overwhelming number of non-profits are
   working to end poverty, and it can be hard to know where you should donate money. Here’s a list of 10 charities that fight poverty that 
-  all received 4-star overall ratings from Charity Navigator, a well-known charity watchdog organization.</p>
-
-   <aside>
+  all received 4-star overall ratings from Charity Navigator, a well-known charity watchdog organization.</p><b>
+   
+  <aside>
 <ul> Percentage of People in Poverty in several Countrys:
   
 <li> 15.3% of Californians lacked enough resources </li>
