--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <center> What Is the Purpose Of the Home Page?</center>
   <p> The purpose of this page is to tell you what this is and what I what I will be doing with this website. This page is the first to other
    three pages which I will be linking from here. This home page is being constructed off of what I have been learning in my Computer Science Class. I
-   will be trying to use diffrent tags to make my page diferent and fun. I will be using the basics I have learned which are HtML(language of
+   will be trying to use different tags to make my page different and fun. I will be using the basics I have learned which are HtML(language of
    the computer/how to code) and CSS which is basically the "decorating" and "styling". </p>
   </h1>
 <aside>  
