--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,14 @@
    
    <a href="index.html">Home</a> | <a href="topic.html">About</a>  | <a href="topic.html">Topic</a> | <b> Contact</b> 
     </center>
-    
-  </body>
   
+   
+  <h1>Email Info: 
+              jasmin.velas5@gmail.com
+       </h1> 
+ 
+    </body>
+   
 </html>
    
   
