--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,9 @@
    <a href="index.html">Home</a> | <a href="topic.html">About</a>  | <a href="topic.html">Topic</a> | <b> Contact</b> 
     </center>
   
-   
-  <h1>Email Info: 
+   <center> <h1>Email Info:</h1></center> 
               jasmin.velas5@gmail.com
-       </h1> 
+      
  
     </body>
    
