--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     </center>
   
    <center> <h1>Email Info:</h1></center> 
-              jasmin.velas5@gmail.com
+   <center><b>  jasmin.velas5@gmail.com</b> </center>
       
  
     </body>
