--- a/topic.html
+++ b/topic.html
@@ -45,14 +45,11 @@ There are millions of people in poverty worldwide.At least 80% of humanity lives
 <main> 
  <h2>
 
-  <a https="https://www.want2donate.org/charity-faqs/what-are-the-top-10-charities-which-help-people-in-poverty"><li>Donate</li></a>
+  <a https="https://www.want2donate.org/"><li>Donate</li></a>
 
  </h2>
-  <footer>
-  
- </footer> 
- </body>
-  
+
+ </body>  
 </html>
    
   
