--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
  
  
- <img src="code.jpeg"> class="sideleft-image" width="300" height="320" alt="code.jpeg">
+ <img src="code.jpeg" class="sideleft-image" width="300" height="320" alt="code.jpeg">
  
  </body>
   </html>
