--- a/topic.html
+++ b/topic.html
@@ -47,6 +47,7 @@ There are millions of people in poverty worldwide.At least 80% of humanity lives
 
   <a https="https://www.want2donate.org/"><li>Donate</li></a>
 
+  <img src="poverty.jpeg"> 
  </h2>
 
  </body>  
